<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">demo3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnphoto">Fotografia</string>
    <string name="btnUpdate">Acceder a API</string>
    <string name="btnParse">Parse</string>
    <string name="btn_from_gallery">Desde la galeria</string>
    <string name="btn_from_camera">Desde la Camara</string>
    <string name="txt_notif_title">Carga de datos Conluida</string>
    <string name="txt_notif_subtitle">Click para tomar foto</string>
    <string name="msg_yes">Si</string>
    <string name="msg_no">No</string>
    <string name="title_activity_camera">CameraActivity</string>

</resources>
