<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CameraActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnfromGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_from_gallery" />

        <Button
            android:id="@+id/btnfromcamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_from_camera" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img"
        android:contentDescription="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
 
</LinearLayout>
