<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools ="http://schemas.android.com/tools"
     android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity" >

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="20dp"
    android:gravity="center"
    android:layout_height="wrap_content" >


    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight = "1"
        android:text="@string/btnUpdate" />

    <Button
        android:id="@+id/btnPhoto"
        android:layout_width="0dp"
        android:layout_weight = "1"
        android:layout_height="wrap_content"
        android:text="@string/btnphoto" />
        
        <Button
        android:id="@+id/btnParse"
        android:layout_width="0dp"
        android:layout_weight = "1"
        android:layout_height="wrap_content"
        android:text="@string/btnParse" />
</LinearLayout>

<ProgressBar
    android:id="@+id/progressBar"
    android:visibility="gone"
    style="?android:attr/progressBarStyleLarge"
    android:layout_gravity="center_vertical|center_horizontal"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" />

<GridView 
    android:id="@+id/grid"
    android:visibility="gone"
    android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    android:numColumns="2"
/>
    

</LinearLayout>
